force-app/main/default/objects/Service_Details__c/Service_Details__c.object-meta.xml
<CustomObject>
    <description>Runs Database service notes and schedule info</description>
    <label>Service</label>
    <nameField>
        <label>Service Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>