force-app/main/default/objects/Service_Details__c/fields/Accpac_Account__c.field-meta.xml
<CustomField>
    <fullName>Accpac_Account__c</fullName>
    <label>Accpac Account #</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>