force-app/main/default/objects/Service_Details__c/fields/Next_Scheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Visit__c</fullName>
    <label>Next Scheduled Visit</label>
    <type>Date</type>
</CustomField>