force-app/main/default/objects/Service_Details__c/fields/RD_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>RD_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>RD Record ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>