force-app/main/default/objects/Service_Details__c/fields/Standing_Order__c.field-meta.xml
<CustomField>
    <fullName>Standing_Order__c</fullName>
    <label>Standing Order</label>
    <referenceTo>Standing_Order__c</referenceTo>
    <relationshipName>Service_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>