force-app/main/default/objects/Service_Details__c/fields/Tech_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Name__c</fullName>
    <label>Tech Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>