force-app/main/default/objects/Service_Details__c/fields/Upsert_Date__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Date__c</fullName>
    <label>Upsert Date</label>
    <type>DateTime</type>
</CustomField>