force-app/main/default/objects/Service_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Service_Types__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Next_Scheduled_Visit__c</columns>
    <columns>Last_Serviced__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>